# kind-of-magick

./: CMakeLists.txt  README.md  conanfile.txt  test-magick.cpp
